iac/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: idea-backlog-default
  namespace: idea-backlog
spec:
  podSelector:
    matchLabels:
      app: idea-backlog
  policyTypes:
    - Ingress
    - Egress


  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: idea-backlog

  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
